# RAG-chomaDB-KU-undergraduate-regulations

./: .dockerignore  .gitignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
src/: rag.ipynb
